# Type of python distribution
[bdist_wheel]
universal = 0

[metadata]
name = youcomment
author = Andres Weber
author-email = andresmweber@gmail.com
summary = A bot for comparing top-level youtube comments and reddit comments.
description-file = README.md
home-page = https://github.com/andresmweber/youcomment
project_urls =
    Bug Reports = https://github.com/andresmweber/youcomment/issues
    Source = https://github.com/andresmweber/youcomment/
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    redditbot
    reddit
    youtube
    comment
    top
    compare
    bot

[extras]
test =
    nose
    coverage
dev =
    nose
    coverage
    newrelic

[nosetests]
with-coverage = 1
cover-package = youcomment
with-xunit = 1

[options]
packages = find:

[options.packages.find]
exclude =
    contrib
    docs
    tests
